fix alignment mobile

--- a/style.css
+++ b/style.css
@@ -458,9 +458,12 @@ Mobile
   .tap {
     display: block;
     text-align: center;
-    margin-top: 25px;
-    margin-bottom: 0;
+    margin: 48px 0 -23px 0;
     font-size: 10px;
+  }
+
+  .portfolio-container {
+    margin: -55px -10px 0 0;
   }
 
   .work-section {
@@ -479,7 +482,7 @@ Mobile
   }
 
   .next-contact:not(*:root) {
-    padding-top: 50px;
+    padding-top: 20px;
   }
 }
 
